--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Test</h1>
-<p>Test2</p>
+<h1>Header1</h1>
+<p>I love how unformatted HTML looks...</p>
 </body>
 </html>
