--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+    body {
+        background-color: rgb(255, 204, 204);
+    }
+</style>
 <body>
 <h1>Header1</h1>
 <p>I love how unformatted HTML looks...</p>
