--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     }
 </style>
 <body>
-<h1>Header1</h1>
-<p>I love how unformatted HTML looks...</p>
+<h1>Hello Internet users</h1>
+<p>Wait patiently here while I update this little pink page for you.</p>
 </body>
 </html>
