--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
-    body {
-        background-color: rgb(255, 230, 230);
-    }
-</style>
+    <!-- ... (head content) ... -->
+</head>
 <body>
-<h1>Hello Internet users</h1>
-<p>Wait patiently here while I update this little pink page for you.</p>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page1.html">Page 1</a></li>
+            <li><a href="page2.html">Page 2</a></li>
+        </ul>
+    </nav>
+    <main>
+        <!-- Content of your landing page goes here -->
+    </main>
 </body>
 </html>
