--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
     <main>
         <p>This is the content of Page 1.</p>
+        <a href="page1.html">Page 1</a>
     </main>
 </body>
 </html>
