--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1</title>
+    <title>Landing</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to Page 1</h1>
+        <h1>Directory</h1>
     </header>
     <main>
-        <p>This is the content of Page 1.</p>
-        <a href="page1.html">Page 1</a>
+        <p>This is the homepage and will eventually contain lists to things. Established 9-22.</p>
+        <a href="page1.html">First link</a>
     </main>
 </body>
 </html>
