--- a/page1.html
+++ b/page1.html
@@ -7,17 +7,10 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Page 1</h1>
+        <h1>Page 1</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="page1.html">Page 1</a></li>
-            <li><a href="page2.html">Page 2</a></li>
-        </ul>
-    </nav>
     <main>
-        <p>This is the content of Page 1.</p>
+        <p>Nothing to say yet, these pages just being tests so I can figure out how this all works.</p>
     </main>
 </body>
 </html>
