--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
+    <style>
+        body {
+            background-color: rgb(255, 230, 230);
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Directory</h1>
     </header>
     <main>
-        <p>This is the homepage and will eventually contain lists to things. Established 9-22.</p>
+        <p>This is the homepage and will eventually contain links to things. Established 9-22.</p>
         <a href="page1.html">First link</a>
     </main>
 </body>
