--- a/page1.html
+++ b/page1.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 1</title>
+    <style>
+        body {
+            background-color: rgb(255, 230, 230);
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Page 1</h1>
+        <h1>First link</h1>
     </header>
     <main>
         <p>Nothing to say yet, these pages just being tests so I can figure out how this all works.</p>
