--- a/page1.html
+++ b/page1.html
@@ -16,6 +16,7 @@
     </header>
     <main>
         <p>Nothing to say yet, these pages just being tests so I can figure out how this all works.</p>
+        <a href="index.html">Back home</a>
     </main>
 </body>
 </html>
