--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,9 @@
         body {
             background-color: rgb(255, 230, 230);
         }
+        p {
+            margin: 0px 0px 0px 40px;
+        }
     </style>
 </head>
 <body>
