--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         body {
             background-color: rgb(255, 230, 230);
         }
+        p {
+            margin: 0px 775px 0px 0px;
+        }
     </style>
 </head>
 <body>
@@ -16,7 +19,7 @@
     </header>
     <main>
         <p>This is the homepage and will eventually contain links to things. Established 9-22.</p>
-        <a href="page1.html">First link</a>
+        <a href="page1.html">9-29-23 post</a>
     </main>
 </body>
 </html>
