--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <p>This is the homepage and will eventually contain links to things. Established 9-22.</p>
-        <a href="page1.html">9-29-23 post</a>
+        <a href="page1.html">9-29-23</a>
     </main>
 </body>
 </html>
