--- a/page1.html
+++ b/page1.html
@@ -18,10 +18,8 @@
         <h1>September 29, 2023</h1>
     </header>
     <main>
-        <p>Now that I've gotten the HTML working in at least a provisional way, I confront the difficulty of finding something to put here that in anyway justifies the effort.</p>
-        < br/> 
-        <p>Easier said than done, of course.... But no longer will this be a simple test page, with some hasty Plato put up.</p>
-        < br/>
+        <p>Now that I've gotten the HTML working in at least a provisional way, I confront the difficulty of finding something to put here that in anyway justifies the effort.<br /></p>
+        <p>Easier said than done, of course.... But no longer will this be a simple test page, with some hasty Plato put up.<br /></p>
         <a href="index.html">Back home</a>
     </main>
 </body>
