--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1>Directory</h1>
     </header>
     <main>
-        <p>This is the homepage and will eventually contain links to things. Established 9-22.</p>
-        <a href="page1.html">9-29-23</a>
+        <p>This is the homepage and will eventually contain links to things.</p>
+        <a href="omn.html">Openmindedness</a>
     </main>
 </body>
 </html>
