--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 </head>
 <body>
     <header>
-        <h1>Directory</h1>
+        <h1>List of posts</h1>
     </header>
     <main>
-        <p>This is the homepage and will eventually contain links to things.</p>
-        <a href="omn.html">Openmindedness</a>
+        <ul>
+        <li><a href="omn.html">When is openmindedness a virtue?</a></li>
+        </ul>
     </main>
 </body>
 </html>
