--- a/omn.html
+++ b/omn.html
@@ -33,7 +33,9 @@
     <p>Perhaps when an evaluator has moderate levels of time (so he is neither so busy that it would be unreasonable to expect him to be diligent, nor is he a lounging aristocrat for whom flippancy is an amusement), we deem him openminded if he chooses to trade some time for fairness. But this seems to praise his fairness, or willingness to sacrifice time, rather than openmindedness-qua-openmindedness. And again, whether or not such a trade is rational is not up to him.</p>
     <br>
     <p>Well, any ideas?</p>
-    <br><br>
+    <br>
     <p><em>First draft October 7, 2023.</em></p>
+    <a href="index.html">List of posts</a>
+
 </body>
 </html>
