--- a/omn.html
+++ b/omn.html
@@ -10,6 +10,12 @@
         }
         p {
             margin: 0px 775px 0px 0px;
+
+            @media (max-width: 768px) {
+            body {
+                margin: 10px; /* Adjust the margin for smaller screens */
+                }
+            }
         }
     </style>
 </head>
