--- a/omn.html
+++ b/omn.html
@@ -6,8 +6,17 @@
     <title>The Virtue of Openmindedness</title>
     <style>
         body {
-            background-color: rgb(255, 230, 230);
-        }
+                margin: 40%;
+                background-color: rgb(255, 230, 230)
+            }
+
+            @media (max-width: 768px) {
+                body {
+                    margin: 0%;
+                    background-color: rgb(255, 230, 230)
+                }
+            }
+
     </style>
 </head>
 <body>
