--- a/omn.html
+++ b/omn.html
@@ -6,8 +6,11 @@
     <title>The Virtue of Openmindedness</title>
     <style>
         body {
-                margin: 40%;
-                background-color: rgb(255, 230, 230)
+            margin-left: 33%;
+            margin-right: 33%;
+            margin-top: 0%;
+            margin-bottom: 0%;
+            background-color: rgb(255, 230, 230)
             }
 
             @media (max-width: 768px) {
