--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <ul>
-        <li><a href="omn.html">When is openmindedness a virtue?</a></li>
+        <li><a href="omn.html">Openmindedness</a></li>
         </ul>
     </main>
 </body>
